UO257565_Pmm/src/parser/PmmParser.java
// Generated from C:/Users/EnriqueJRodriguez/git/DLP/UO257565_Pmm/src/parser\Pmm.g4 by ANTLR 4.8
package parser;
 import ast.*;
				  import ast.definitions.*;
				  import ast.expressions.*;
				  import ast.statements.*;
				  import ast.types.*;
				  import java.util.List;
				  import java.util.ArrayList;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, TRASH=37, ONELINECOMMENTARY=38, 
		MULTIPLELINESCOMMENT=39, ID=40, INT_CONSTANT=41, REAL_CONSTANT=42, CHAR_CONSTANT=43;
	public static final int
		RULE_program = 0, RULE_variable_definition = 1, RULE_identifiers = 2, 
		RULE_function_definition = 3, RULE_function_body = 4, RULE_statement = 5, 
		RULE_expression = 6, RULE_simple_type = 7;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "variable_definition", "identifiers", "function_definition", 
			"function_body", "statement", "expression", "simple_type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "';'", "'struct'", "'{'", "'}'", "'['", "']'", "','", "'def'", 
			"'('", "')'", "'='", "'print'", "'input'", "'return'", "'if'", "'else'", 
			"'while'", "'.'", "'-'", "'!'", "'*'", "'/'", "'%'", "'+'", "'>'", "'>='", 
			"'<'", "'<='", "'!='", "'=='", "'&&'", "'||'", "'int'", "'double'", "'char'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "TRASH", "ONELINECOMMENTARY", "MULTIPLELINESCOMMENT", "ID", "INT_CONSTANT", 
			"REAL_CONSTANT", "CHAR_CONSTANT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public Variable_definitionContext vd;
		public Function_definitionContext fd;
		public TerminalNode EOF() { return getToken(PmmParser.EOF, 0); }
		public List<Variable_definitionContext> variable_definition() {
			return getRuleContexts(Variable_definitionContext.class);
		}
		public Variable_definitionContext variable_definition(int i) {
			return getRuleContext(Variable_definitionContext.class,i);
		}
		public List<Function_definitionContext> function_definition() {
			return getRuleContexts(Function_definitionContext.class);
		}
		public Function_definitionContext function_definition(int i) {
			return getRuleContext(Function_definitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			List<Definition> definitions = new ArrayList<Definition>();
			setState(25);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8 || _la==ID) {
				{
				setState(23);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ID:
					{
					setState(17);
					((ProgramContext)_localctx).vd = variable_definition();
					for(VariableDefinition v : ((ProgramContext)_localctx).vd.ast) {definitions.add(v);}
					}
					break;
				case T__8:
					{
					setState(20);
					((ProgramContext)_localctx).fd = function_definition();
					definitions.add(((ProgramContext)_localctx).fd.ast);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(27);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(28);
			match(EOF);
			((ProgramContext)_localctx).ast =  new Program(definitions.get(0).getLine(), definitions.get(0).getColumn(),definitions);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_definitionContext extends ParserRuleContext {
		public List<VariableDefinition> ast = new ArrayList<VariableDefinition>();
		public IdentifiersContext identifiers;
		public Token def;
		public Simple_typeContext st1;
		public Token st;
		public Variable_definitionContext vds;
		public Token ic;
		public Simple_typeContext simple_type;
		public IdentifiersContext identifiers() {
			return getRuleContext(IdentifiersContext.class,0);
		}
		public Simple_typeContext simple_type() {
			return getRuleContext(Simple_typeContext.class,0);
		}
		public List<Variable_definitionContext> variable_definition() {
			return getRuleContexts(Variable_definitionContext.class);
		}
		public Variable_definitionContext variable_definition(int i) {
			return getRuleContext(Variable_definitionContext.class,i);
		}
		public List<TerminalNode> INT_CONSTANT() { return getTokens(PmmParser.INT_CONSTANT); }
		public TerminalNode INT_CONSTANT(int i) {
			return getToken(PmmParser.INT_CONSTANT, i);
		}
		public Variable_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitVariable_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_definitionContext variable_definition() throws RecognitionException {
		Variable_definitionContext _localctx = new Variable_definitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_variable_definition);
		int _la;
		try {
			setState(86);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(31);
				((Variable_definitionContext)_localctx).identifiers = identifiers();
				setState(32);
				((Variable_definitionContext)_localctx).def = match(T__0);
				setState(33);
				((Variable_definitionContext)_localctx).st1 = simple_type();
				setState(34);
				match(T__1);
				 for(String id : ((Variable_definitionContext)_localctx).identifiers.ast) {
				                                                                                                            _localctx.ast.add(new VariableDefinition(((Variable_definitionContext)_localctx).def.getLine(), ((Variable_definitionContext)_localctx).def.getCharPositionInLine() + 1,
				                                                                                                                                            id,((Variable_definitionContext)_localctx).st1.ast));
				                                                                                                        }
				                                                                                                    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(37);
				((Variable_definitionContext)_localctx).identifiers = identifiers();
				setState(38);
				((Variable_definitionContext)_localctx).def = match(T__0);
				setState(39);
				((Variable_definitionContext)_localctx).st = match(T__2);
				List<VariableDefinition> variables = new ArrayList<VariableDefinition>();
				                                                                                                     List<FieldDefinition> fields = new ArrayList<FieldDefinition>();
				setState(41);
				match(T__3);
				setState(45); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(42);
					((Variable_definitionContext)_localctx).vds = variable_definition();
					for(VariableDefinition vd : ((Variable_definitionContext)_localctx).vds.ast) {
					                                                                                                        	  variables.add(vd);
					                                                                                                        	  fields.add(new FieldDefinition(vd.getLine(), vd.getColumn(),
					                                                                                                        	                                 vd.getName(), vd.getType()));
					                                                                                                        	}
					                                                                                                        
					}
					}
					setState(47); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==ID );
				setState(49);
				match(T__4);
				setState(50);
				match(T__1);
				 for(String id : ((Variable_definitionContext)_localctx).identifiers.ast) {
				                                                                                                    		_localctx.ast.add(new VariableDefinition(((Variable_definitionContext)_localctx).def.getLine(), ((Variable_definitionContext)_localctx).def.getCharPositionInLine() + 1,
				                                                                                                    		         id,new Struct(((Variable_definitionContext)_localctx).st.getLine(), ((Variable_definitionContext)_localctx).st.getCharPositionInLine() + 1, fields)));
				                                                                                                        }
				                                                                                                    
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(53);
				((Variable_definitionContext)_localctx).identifiers = identifiers();
				setState(54);
				((Variable_definitionContext)_localctx).def = match(T__0);
				List<Integer> sizes = new ArrayList<Integer>(); 
				setState(60); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(56);
					match(T__5);
					setState(57);
					((Variable_definitionContext)_localctx).ic = match(INT_CONSTANT);
					setState(58);
					match(T__6);
					sizes.add(LexerHelper.lexemeToInt((((Variable_definitionContext)_localctx).ic!=null?((Variable_definitionContext)_localctx).ic.getText():null)));
					}
					}
					setState(62); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__5 );
				Type t; 
				setState(81);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__33:
				case T__34:
				case T__35:
					{
					setState(65);
					((Variable_definitionContext)_localctx).simple_type = simple_type();
					t=((Variable_definitionContext)_localctx).simple_type.ast;
					}
					break;
				case T__2:
					{
					setState(68);
					((Variable_definitionContext)_localctx).st = match(T__2);
					setState(69);
					match(T__3);
					List<FieldDefinition> fields = new ArrayList<FieldDefinition>();
					setState(74); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(71);
						((Variable_definitionContext)_localctx).vds = variable_definition();
						for(VariableDefinition vd : ((Variable_definitionContext)_localctx).vds.ast) {
						                                                                                                        	fields.add(new FieldDefinition(vd.getLine(), vd.getColumn(),
						                                                                                                        	            vd.getName(), vd.getType()));
						                                                                                                            }
						                                                                                                        
						}
						}
						setState(76); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==ID );
					setState(78);
					match(T__4);
					t=new Struct(((Variable_definitionContext)_localctx).st.getLine(), ((Variable_definitionContext)_localctx).st.getCharPositionInLine() + 1, fields);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(83);
				match(T__1);

				                                                                                                    	int dimension = sizes.size()-1;
				                                                                                                    	ArrayType array = new ArrayType(((Variable_definitionContext)_localctx).def.getLine(), ((Variable_definitionContext)_localctx).def.getCharPositionInLine() + 1, sizes.get(0), null);
				                                                                                                    	ArrayType d = array;
				                                                                                                    	while(dimension>1) {
				                                                                                                    	    ArrayType array2 = new ArrayType(((Variable_definitionContext)_localctx).def.getLine(),((Variable_definitionContext)_localctx).def.getCharPositionInLine() + 1,
				                                                                                                    	                        sizes.get(sizes.size()-dimension), null);
				                                                                                                    		array.setType(array2);
				                                                                                                    		array = array2;
				                                                                                                    		dimension--;
				                                                                                                    	}
				                                                                                                    	if(dimension == 0) {
				                                                                                                    		array.setType(t);
				                                                                                                    	} else {
				                                                                                                    		array.setType(new ArrayType(((Variable_definitionContext)_localctx).def.getLine(),((Variable_definitionContext)_localctx).def.getCharPositionInLine() + 1,
				                                                                                                    		                        sizes.get(sizes.size()-dimension), t));
				                                                                                                    	}
				                                                                                                    	for(String id : ((Variable_definitionContext)_localctx).identifiers.ast) {
				                                                                                                    		_localctx.ast.add(new VariableDefinition(((Variable_definitionContext)_localctx).def.getLine(), ((Variable_definitionContext)_localctx).def.getCharPositionInLine() + 1,id,d));
				                                                                                                    	}
				                                                                                                    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifiersContext extends ParserRuleContext {
		public List<String> ast = new ArrayList<String>();
		public Token id1;
		public Token id2;
		public List<TerminalNode> ID() { return getTokens(PmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PmmParser.ID, i);
		}
		public IdentifiersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifiers; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitIdentifiers(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifiersContext identifiers() throws RecognitionException {
		IdentifiersContext _localctx = new IdentifiersContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identifiers);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			((IdentifiersContext)_localctx).id1 = match(ID);
			_localctx.ast.add((((IdentifiersContext)_localctx).id1!=null?((IdentifiersContext)_localctx).id1.getText():null));
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(90);
				match(T__7);
				setState(91);
				((IdentifiersContext)_localctx).id2 = match(ID);
				_localctx.ast.add((((IdentifiersContext)_localctx).id2!=null?((IdentifiersContext)_localctx).id2.getText():null));
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_definitionContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public Token def;
		public Token name;
		public Token id1;
		public Simple_typeContext st1;
		public Token id2;
		public Simple_typeContext st2;
		public Simple_typeContext st3;
		public Function_bodyContext function_body;
		public Function_bodyContext function_body() {
			return getRuleContext(Function_bodyContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(PmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PmmParser.ID, i);
		}
		public List<Simple_typeContext> simple_type() {
			return getRuleContexts(Simple_typeContext.class);
		}
		public Simple_typeContext simple_type(int i) {
			return getRuleContext(Simple_typeContext.class,i);
		}
		public Function_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitFunction_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_definitionContext function_definition() throws RecognitionException {
		Function_definitionContext _localctx = new Function_definitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			((Function_definitionContext)_localctx).def = match(T__8);
			setState(99);
			((Function_definitionContext)_localctx).name = match(ID);
			setState(100);
			match(T__9);
			List<VariableDefinition> variables = new ArrayList<VariableDefinition>();
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(102);
				((Function_definitionContext)_localctx).id1 = match(ID);
				setState(103);
				match(T__0);
				setState(104);
				((Function_definitionContext)_localctx).st1 = simple_type();
				variables.add(new VariableDefinition(((Function_definitionContext)_localctx).id1.getLine(), ((Function_definitionContext)_localctx).id1.getCharPositionInLine() + 1,(((Function_definitionContext)_localctx).id1!=null?((Function_definitionContext)_localctx).id1.getText():null),((Function_definitionContext)_localctx).st1.ast));
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__7) {
					{
					{
					setState(106);
					match(T__7);
					setState(107);
					((Function_definitionContext)_localctx).id2 = match(ID);
					setState(108);
					match(T__0);
					setState(109);
					((Function_definitionContext)_localctx).st2 = simple_type();
					variables.add(new VariableDefinition(((Function_definitionContext)_localctx).id1.getLine(), ((Function_definitionContext)_localctx).id1.getCharPositionInLine() + 1, (((Function_definitionContext)_localctx).id2!=null?((Function_definitionContext)_localctx).id2.getText():null),((Function_definitionContext)_localctx).st2.ast));
					}
					}
					setState(116);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(119);
			match(T__10);
			setState(120);
			match(T__0);
			Type t = new VoidType(((Function_definitionContext)_localctx).def.getLine(), ((Function_definitionContext)_localctx).def.getCharPositionInLine() + 1);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__33) | (1L << T__34) | (1L << T__35))) != 0)) {
				{
				setState(122);
				((Function_definitionContext)_localctx).st3 = simple_type();
				 t = ((Function_definitionContext)_localctx).st3.ast;
				}
			}

			List<Statement> statements = new ArrayList<Statement>();
			setState(128);
			match(T__3);
			setState(129);
			((Function_definitionContext)_localctx).function_body = function_body();
			statements = ((Function_definitionContext)_localctx).function_body.ast;
			setState(131);
			match(T__4);
			((Function_definitionContext)_localctx).ast =  new FunctionDefinition(((Function_definitionContext)_localctx).def.getLine(), ((Function_definitionContext)_localctx).def.getCharPositionInLine()+1,
			                                                                statements, new FunctionType( ((Function_definitionContext)_localctx).def.getLine(), ((Function_definitionContext)_localctx).def.getCharPositionInLine()+1,t, variables),(((Function_definitionContext)_localctx).name!=null?((Function_definitionContext)_localctx).name.getText():null)); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_bodyContext extends ParserRuleContext {
		public List<Statement> ast = new ArrayList<Statement>();
		public Variable_definitionContext variable_definition;
		public StatementContext statement;
		public List<Variable_definitionContext> variable_definition() {
			return getRuleContexts(Variable_definitionContext.class);
		}
		public Variable_definitionContext variable_definition(int i) {
			return getRuleContext(Variable_definitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Function_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_body; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitFunction_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_bodyContext function_body() throws RecognitionException {
		Function_bodyContext _localctx = new Function_bodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_function_body);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(134);
					((Function_bodyContext)_localctx).variable_definition = variable_definition();
					for(VariableDefinition vd : ((Function_bodyContext)_localctx).variable_definition.ast) {
					                                                                           		_localctx.ast.add(vd);
					                                                                           		}
					                                                                           
					}
					} 
				}
				setState(141);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__17) | (1L << T__19) | (1L << T__20) | (1L << ID) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << CHAR_CONSTANT))) != 0)) {
				{
				{
				setState(142);
				((Function_bodyContext)_localctx).statement = statement();
				_localctx.ast.add(((Function_bodyContext)_localctx).statement.ast);
				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Statement ast;
		public ExpressionContext e1;
		public ExpressionContext e2;
		public StatementContext st1;
		public StatementContext st2;
		public StatementContext st5;
		public StatementContext st3;
		public StatementContext st4;
		public StatementContext st6;
		public Token ID;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode ID() { return getToken(PmmParser.ID, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}
